# envello-app

./: .gitignore  AI_CONTEXT.md  ARCHITECTURE_SUMMARY.md  CHANGELOG.md  CLAUDE.md  DATA_FLOW_DOCUMENTATION.md  DOCUMENTATION.md  DOCUMENTATION_INDEX.md  ENTERPRISE_IMPROVEMENTS.md  ERROR_SUPPRESSION_SUMMARY.md  FEATURE_COMPARISON.md  MIGRATION_NOTES.md  MIGRATION_ROADMAP.md  OFFLINE_READINESS.md  PHASE_1_IMPLEMENTATION.md  README.md  RXDB_REMOVAL_SUMMARY.md  TASKS_IMPROVEMENTS.md  angular.json  build-libs.sh  index.html  nx.json  package-lock.json  package.json  package.react.json  patch_vendor.js  profile-implementation-summary.md  skills-lock.json  supabase_profiles.sql  supabase_schema.sql  tsconfig.base.json  tsconfig.json  vercel.json  vite.config.ts
.github/workflows/: build.yml  ci.yml  release.yml  version-bump.yml
apps/admin/: jest.config.ts  project.json  tsconfig.json
apps/desktop/: karma.conf.js  project.json  tsconfig.app.json  tsconfig.spec.json
apps/landing/: jest.config.ts  project.json
apps/mobile/: project.json  tsconfig.app.json  tsconfig.json
apps/mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/src-tauri/capabilities/: mobile.json
apps/mobile/src-tauri/src/: lib.rs  main.rs
apps/web/: ngsw-config.json  project.json  tsconfig.app.json  tsconfig.json
libs/core/: jest.config.ts  project.json
libs/feature-analytics/: jest.config.ts  project.json  tsconfig.json  tsconfig.lib.json
libs/feature-bookmarks/: jest.config.ts  project.json
libs/feature-books/: README.md  jest.config.ts  project.json
libs/feature-code-snippets/: README.md  jest.config.ts  project.json
libs/feature-daily-notes/: project.json
libs/feature-home/: jest.config.ts  project.json
libs/feature-knowledge/: jest.config.ts  project.json
libs/feature-meetings/: jest.config.ts  project.json
libs/feature-novels/: README.md  jest.config.ts  project.json
libs/feature-people/: jest.config.ts  project.json
libs/feature-projects/: README.md  project.json  tsconfig.lib.json
libs/feature-spaces/: README.md  jest.config.ts  project.json  tsconfig.json
libs/feature-tasks/: jest.config.ts  project.json  tsconfig.lib.json
libs/feature-vault/: README.md  jest.config.ts  project.json
libs/feature-vendor/: README.md  jest.config.ts  project.json
libs/feature-workspace/: README.md  jest.config.ts  project.json
libs/feature-write/: README.md  jest.config.ts  project.json
libs/ui/: jest.config.ts  project.json  tsconfig.json  tsconfig.lib.json
powersync/: cli.yaml  service.yaml  sync-config.yaml
projects/core/: package.json
scripts/: dev-mac.sh
src/: App.css  App.tsx  index.html  main.ts  polyfills.ts  styles.css
src-react/: App.css  styles.css
src-react/components/: BrainstormingView.tsx  CommandPalette.css  CommandPalette.tsx  DailyNotesView.css  Footer.css  JournalsView.tsx  MeetingsView.css  NovelEditorView.css  OverviewView.tsx  RecentActivity.css  RecentActivity.tsx  ResearchView.css  SyntaxHighlighter.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  update.key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  media_helper.m
src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
(+1191 files in other folders)
