[package]
name = "envello-mobile"
version = "0.1.0"
description = "Envello Mobile (iOS & Android)"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "envello_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["default"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
